<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/pokemon_details_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        android:gravity="center"
        android:background="@color/primary_light"
        android:textColor="@color/text_primary" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/pokemon_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_level_text"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/icon_placeholder" />

        <TextView
            android:id="@+id/pokemon_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="Pikachu"
            app:layout_constraintLeft_toRightOf="@+id/pokemon_image_view"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <es.developer.achambi.pkmng.modules.ui.screen.TypeView
            android:id="@+id/pokemon_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="electric"
            app:layout_constraintLeft_toRightOf="@+id/pokemon_image_view"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name_text" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.50"
            android:orientation="vertical"
            android:id="@+id/guideline_bottom" />

        <TextView
            android:id="@+id/pokemon_speed_text"
            style="@style/primary_text_style"
            tools:text="SPE: 50"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_spa_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_spa_text" />

        <TextView
            android:id="@+id/pokemon_spa_text"
            style="@style/primary_text_style"
            tools:text="SPA: 50"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_spd_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_spd_text" />

        <TextView
            android:id="@+id/pokemon_spd_text"
            style="@style/primary_text_style"
            android:layout_marginEnd="29dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="SPD: 55"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/pokemon_atk_text"
            style="@style/primary_text_style"
            tools:text="ATK: 55"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_hp_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_hp_text" />

        <TextView
            android:id="@+id/pokemon_def_text"
            style="@style/primary_text_style"
            android:layout_marginStart="8dp"
            tools:text="DEF: 40"
            app:layout_constraintLeft_toLeftOf="@+id/guideline_bottom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/pokemon_hp_text"
            style="@style/primary_text_style"
            tools:text="HP: 35"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_def_text"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_def_text" />

        <TextView
            android:id="@+id/pokemon_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="level 50"
            app:layout_constraintEnd_toEndOf="@+id/pokemon_image_view"
            app:layout_constraintStart_toStartOf="@+id/pokemon_image_view"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingBottom="8dp">

        <es.developer.achambi.pkmng.modules.ui.screen.AbilityView
            android:id="@+id/pokemon_ability_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0" />

        <es.developer.achambi.pkmng.modules.ui.screen.NatureView
            android:id="@+id/pokemon_nature_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_item_text"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_item_text"
            tools:text="nature"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <es.developer.achambi.pkmng.modules.ui.screen.ItemView
            android:id="@+id/pokemon_item_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_ability_text"
            app:layout_constraintTop_toBottomOf="@+id/pokemon_ability_text"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginEnd="8dp" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:id="@+id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/configuration_details_move_0"
            style="@style/secondary_text_with_background_style"
            android:layout_marginStart="0dp"
            tools:text="Signal beam"
            app:layout_constraintLeft_toLeftOf="@+id/configuration_details_move_1"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/configuration_details_move_1" />

        <TextView
            android:id="@+id/configuration_details_move_1"
            style="@style/secondary_text_with_background_style"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            tools:text="Thunderbolt"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline2"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/configuration_details_move_2"
            style="@style/secondary_text_with_background_style"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            tools:text="Hidden Power"
            app:layout_constraintLeft_toLeftOf="@+id/configuration_details_move_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/configuration_details_move_3"
            app:layout_constraintHorizontal_bias="0.0" />

        <TextView
            android:id="@+id/configuration_details_move_3"
            style="@style/secondary_text_with_background_style"
            tools:text="Grass knot"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0" />

    </android.support.constraint.ConstraintLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/text_gray">

    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/details_choose_configuration_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_light"
            android:text="@string/details_action_button_choose_configuration" />

        <Button
            android:id="@+id/details_damage_calculator_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/speed_calculator_title"
            android:backgroundTint="@color/primary_light"
            />

        <Button
            android:id="@+id/details_edit_configuration_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary_light"
            android:text="@string/edit_configuration_activity_title" />


    </LinearLayout>
</LinearLayout>