<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="SmallSP"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:background="@drawable/text_primary_background"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/type_quick_detail_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:ellipsize="end"
        tools:text="Resistant to: Water x0 Electric x0.5"
        android:textColor="@color/text_primary"
        android:textSize="11sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/type_quick_details_bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Weak against: Ground x4"
        android:textColor="@color/text_primary"
        android:textSize="11sp"
        app:layout_constraintHorizontal_bias="0.0"
        android:ellipsize="end"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/type_quick_detail_top_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>