...
    <string name="search_configuration_hint">Search configuration</string>
    <string name="search_item_hint">Search item</string>
    <string name="search_nature_hint">Search nature</string>
    <string name="search_ability_hint">Search ability</string>
    <string name="search_move_hint">Search move</string>
    <string name="overview_activity_title">My team</string>
    <string name="damage_calculator_activity_title">Damage Calculator</string>
    <string name="create_config_activity_title">Create Configuration</string>
    <string name="edit_configuration_activity_title">Edit Configuration</string>
    <string name="search_pokemon_activity_title">Search Pokemon</string>
    <string name="search_configuration_activity_title">Search Configuration</string>
    <string name="search_item_activity_title">Search Item</string>
    <string name="search_nature_activity_title">Search Nature</string>
    <string name="search_ability_activity_title">Search Ability</string>
...
