...
            app:layout_constraintTop_toBottomOf="@+id/pokemon_name_text"
            tools:text="electric"
            android:layout_marginStart="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/pokemon_name_text" />

        <TextView
            android:id="@+id/pokemon_total_base_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="4dp"
...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/details_create_config_action_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:text="@string/details_action_button_create_configuration"
            android:backgroundTint="@color/primary_light"
            android:visibility="visible"
...
